--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
     "build": "tsc && vite build",
     "lint": "eslint src --ext .ts,.tsx",
     "preview": "vite preview",
-    "dev:server": "json-server server.json -w"
+    "dev:server": "json-server server.json -w -d 500"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-radio-group": "^1.2.0",
     "D": "^1.0.0",
-    "json-server": "^1.0.0-beta.1",
+    "json-server": "^0.17.1",
     "phosphor-react": "^1.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
