--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "axios": "^1.7.2",
     "D": "^1.0.0",
     "json-server": "^0.17.1",
+    "memo": "^1.0.1",
     "phosphor-react": "^1.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
+    "scheduler": "^0.23.2",
     "styled-components": "^6.1.11",
+    "use-context-selector": "^2.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
